webclient/standard.css
@CHARSET "ISO-8859-1";
/***** Corporate Identity *****/
body {
	background-color: grey; /* color outside the content */
	padding: 0.4em;
	font-family: serif;
}

div#all { /* base definition for all content */
	width: 60em;
	background-color: white;
	margin: 0 auto; /* center all divs */
}

div#ci {
	background-color: orange;
	color: #0B0B61;
	text-align: center;
	font-size: 18px;
	min-height: 150px;
	padding: 0.4em;
}

div#logoimg {
	float: left;
}

div#ci h1 {
	font-size: 24px;
	color: #0B0B61;
}

/*** curr **/
span.curr {
	font-weight: bold;
}

span.substeps {
	font-weight: bold;
}

/*** Content ***/
div#maincontent {
	padding: 1em;
}

div#maincontent h1 {
	color: orange;
}

div#auth label {
	display: inline-block;
	width: 320px;;
	line-height: 1.5em;
}

/*** Steps ****/
div#steps {
	margin: 1em;
	float: right;
	width: 20em;
	border: 2px solid #0B0B61;
	padding: 0.4em;
}

div#steps h1 {
	font-size: 1.2em;
	color: orange;
}

/*** Navigation bar ***/
div#nav {
	background-color: #0B0B61;
	text-align: center;
	color: white;
	display: block;
	padding: 0.4em;
}

div#nav a {
	text-align: center;
	color: white;
	padding: 0.4em;
	font-family: sans-serif;
}

div#nav a:hover {
	background: black;
}

/*** Log ***/
div#log {
	
}

div#log h1 {
	font-size: 1em;
}

div#log textarea {
	width: 70em;
	height: 20em;
}

/*** technical infos ***/
div#techinfosswitch {
	padding: 1em;
}

div#techinfos {
	padding: 1em;
}

/*** tally result **/
div#freq {
	/**	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
	font-size: 12px; */
	background: #fff;
	margin: 45px;
	width: 480px;
	border-collapse: collapse;
	text-align: left;
}

div#freq th {
	font-size: 14px;
	font-weight: normal;
	color: #039;
	padding: 10px 8px;
	border-bottom: 2px solid #6678b1;
	text-align: center;
}

.optionHead {
	width: 25em;
}

.numVotes {
	width: 10em;
	text-align: center;
}

div#freq td {
	border-bottom: 1px solid #ccc;
	color: #669;
	padding: 6px 8px;
}

div#freq tbody tr:hover td {
	color: #339;
	background: #eff2ff;
}

div#freq tfoot {
	font-style: italic;
}

div#allvotes {
	
}

div#errorDiv {
	/* div that is usually hidden, showing a connection problem and the retry button */
	
}

div#error {
	/* div inside errorDiv containing the error massage and the guide what to do. It does not include the retry button */
	background: red;
}

input#electionUrl {
	height: 2em;
	width: 100%;
}

/*** Ranking Table ***/
.voteOptions th {
	/* font-size: 14px; */
	/* font-weight: normal; */
	color: #039;
	padding: 10px 8px;
	border-bottom: 2px solid #6678b1;
	text-align: center;
}

.voteOptions tbody {
	padding: 12px;
}

/* this causes IE to make everything grey but is needed for chrome */
input[type="range"].likeDisabled
	/* not working: and (-webkit-min-device-pixel-ratio:0) */ {
	background-color: lightGrey !important;
}

input[type="range"].likeDisabled::-moz-range-track {
	background-color: lightGrey !important;
}

input[type="range"].likeDisabled::-ms-fill-upper {
	background-color: lightGrey !important;
}

input[type="range"].likeDisabled::-ms-fill-lower {
	background-color: lightGrey !important;
}

/* this causes IE to make everything grey but is needed for chrome */
.voteOptions  input[type="range"]
	/* not working: and (-webkit-min-device-pixel-ratio:0) */ {
	border-radius: 5px;
	box-shadow: inset 0px 3px 5px #333;
	background-color: blue;
	height: 8px;
	vertical-align: middle;
}

.voteOptions input[type='range']::-moz-range-track {
	border-radius: 5px;
	box-shadow: inset 0 3px 5px #333;
	background-color: blue;
	height: 8px;
}

input[type="range"]::-ms-fill-upper {
	background-color: blue;
}

input[type="range"]::-ms-fill-lower {
	background-color: blue;
}

/*
.voteOptions input[type='range']::-ms-track {
	 border-radius: 5px;
	 box-shadow: inset 0 3px 5px #333;
	 background-color: blue;
	 height: 8px;
}
*/
.votingOption {
	border: 2px solid #6678b1;
}

.votingOption h1{
	color: darkblue !important;
	font-size: 24px;
}


.votingOptionText:hover {
	outline: 2px solid #6678b1;
	cursor: move;
}

.votingOptionText {
	width: 80%;
}

.rankNo {
	text-align: center;
}

.votingOptionText {
	width: 80%;
	padding: 10px;
}

.moveRank {
	text-align: center;
	word-spacing: 0.1em;
}

.moveRank  a {
	text-decoration: none;
	background-color: yellow;
}

